--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/dc35e1a6ba.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>My Games</title>
 </head>
@@ -48,12 +49,87 @@
                         <label class="manual-btn" for="radio2"></label>
                         <label class="manual-btn" for="radio3"></label>
                     </div>
-                </div>
-            </div>
-            <div class="header-background-content-container">
 
+
+                    <div class="header-navbar-container">
+                        <div class="header-navbar-wrapper">
+                            <div class="logo-container">
+                                <i class="fa-solid fa-chess-knight"></i>
+                                <div class="logo-content">
+                                    <div>MY<span>GAMES</span></div>
+                                    <div>Games & Merch</div>
+                                </div>
+                            </div>
+                            <ul class="nav-links-container">
+                                <li><a href="#">HOME</a></li>
+                                <li><a href="#">SERVICES</a></li>
+                                <li><a href="#">PRODUCTS</a></li>
+                                <li><a href="#">ACCOUNTS</a></li>
+                                <li><a href="#">CONTACT</a></li>
+                            </ul>
+                            <div class="search-container">
+                                <input type="text" placeholder="Search and play your game...">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="header-disc-container">
+                        <img src="/images/witcher-3-cd-cropped.png" alt="">
+                        <div class="disc-content-info">
+                            <div class="disc-content-header">THE WITCHER III: WILD HUNT <span>$99.99</span></div>
+                            <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo amet et aspernatur nostrum sed dolorum in id eos, ullam nihil!</div>
+                            <button>GRAB YOUR COPY NOW!</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
+    <main>
+        <section>
+            <div class="content-section-container">
+                <div class="content-section-wrapper">
+                    <div class="info-container">
+                        <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, ad?</h4>
+                        <div class="content-choices-container">
+                            <div class="choice-item">
+                                <div class="choice-item-icon-container"><i class="fa-solid fa-gamepad"></i></div>
+                                <div><span>Play</span> unlimited games</div>
+                                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis modi cupiditate veniam dolores impedit quasi odio temporibus, vitae eligendi doloremque.</div>
+                            </div>
+                            <div class="choice-item">
+                                <div class="choice-item-icon-container"><i class="fa-solid fa-key"></i></div>
+                                <div><span>Access</span> early alpha & beta games</div>
+                                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis modi cupiditate veniam dolores impedit quasi odio temporibus, vitae eligendi doloremque.</div>
+                            </div>
+                            <div class="choice-item">
+                                <div class="choice-item-icon-container"><i class="fa-solid fa-lock"></i></div>
+                                <div><span>Unlock</span> rewards & achievement</div>
+                                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis modi cupiditate veniam dolores impedit quasi odio temporibus, vitae eligendi doloremque.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="new-release-container">
+                        <div>
+                            <div></div>
+                            <div>NEW RELEASES</div>
+                            <div></div>
+                        </div>
+                        <div>
+                            <div>
+                                <div>$99.99</div>
+                                <div>20% OFF</div>
+                                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates, dolore illo rem enim tempora.</div>
+                            </div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
