--- a/index.html
+++ b/index.html
@@ -111,25 +111,74 @@
                         </div>
                     </div>
                     <div class="new-release-container">
-                        <div>
-                            <div></div>
-                            <div>NEW RELEASES</div>
-                            <div></div>
+                        <div class="new-release-header-container">
+                            <div class="line-bar"></div>
+                            <h2>NEW RELEASES</h2>
+                            <div class="line-bar"></div>
                         </div>
-                        <div>
-                            <div>
-                                <div>$99.99</div>
-                                <div>20% OFF</div>
-                                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates, dolore illo rem enim tempora.</div>
+                        <div class="games-container">
+                            <div class="game-wrapper">
+                                <img src="/images/dota2.jpg" alt="">
+                                <div class="game-wrapper-info-container">
+                                    <div class="promo-container">
+                                        <button class="price-btn">$99.99</button>
+                                        <button class="discount-btn">20% OFF</button>
+                                    </div>
+                                    <div class="game-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates, dolore illo rem enim tempora.</div>
+                                </div>
                             </div>
-                            <div></div>
-                            <div></div>
-                            <div></div>
+                            <div class="game-wrapper">
+                                <img src="/images/god-of-war.jpg" alt="">
+                                <div class="game-wrapper-info-container">
+                                    <div class="promo-container">
+                                        <button class="price-btn">$99.99</button>
+                                    </div>
+                                    <div class="game-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates, dolore illo rem enim tempora.</div>
+                                </div>
+                            </div>
+                            <div class="game-wrapper">
+                                <img src="/images/horizon.jpg" alt="">
+                                <div class="game-wrapper-info-container">
+                                    <div class="promo-container">
+                                        <button class="price-btn">$99.99</button>
+                                        <button class="discount-btn">12 LEFT</button>
+                                    </div>
+                                    <div class="game-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates, dolore illo rem enim tempora.</div>
+                                </div>
+                            </div>
+                            <div class="game-wrapper">
+                                <img src="/images/tekken7.jpeg" alt="">
+                                <div class="game-wrapper-info-container">
+                                    <div class="promo-container">
+                                        <button class="price-btn">$99.99</button>
+                                    </div>
+                                    <div class="game-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates, dolore illo rem enim tempora.</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-wrapper">
+                <div></div>
+                <div>
+                    <div>
+                        <h5>SERVICES</h5>
+                        <ul>
+                            <li><a href="#">Lorem ipsum</a></li>
+                            <li><a href="#">Lorem ipsum dolor</a></li>
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Lorem ipsum dolor sit</a></li>
+                            <li><a href="#">Lorem ipsum</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
